[tool.poetry]
name = "terrain-generation"
version = "0.1.0"
description = "grpahics"
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyOpenGL = "^3.1.6"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
