[tool.poetry]
name = "terrain-generation"
version = "0.1.0"
description = "grpahics"
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyOpenGL = "^3.1.6"
perlin-noise = "^1.12"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
